# simple_core

./: Cargo.toml  README.md  Taskfile.yml  build.rs  debug_commands.txt  rust-toolchain.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: framebuffer.rs  gdt.rs  interrupts.rs  io.rs  logger.rs  main.rs  serial.rs  utils.rs
src/: main.rs
