[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
test = false
bench = false

[dependencies]
bootloader_api = "0.11.10"
embedded-graphics = "0.8.1"
bootloader-x86_64-common = "0.11.10"
conquer-once = { version = "0.4.0", default-features = false }
log = { version = "0.4.17", default-features = false }
x86_64 = "0.15.2"
uart_16550 = "0.3.2"
